enable auth
