# docs/swagger/swagger.json
@@ -11,7 +11,7 @@
             "name": "Apache 2.0",
             "url": "https://github.com/meltred/meltcd/blob/main/LICENSE"
         },
-        "version": "0.5"
+        "version": "0.6"
     },
     "host": "localhost:11771",
     "basePath": "/api",
@@ -412,6 +412,25 @@
                         "schema": {
                             "$ref": "#/definitions/app.GlobalResponse"
                         }
+                    }
+                }
+            }
+        },
+        "/user": {
+            "get": {
+                "tags": [
+                    "User"
+                ],
+                "summary": "Get username of current logged-in user",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized"
                     }
                 }
             }
